fix spacing, margins and button behvior stretch

--- a/styles.css
+++ b/styles.css
@@ -16,15 +16,6 @@ body {
   /* Base font size using viewport width */
 }
 
-.financial-overview-container {
-  box-sizing: border-box;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-}
-
-
 /* Title and Notes */
 .title {
   box-sizing: border-box;
@@ -89,7 +80,7 @@ body {
   /* border: 2px dashed red; */
   box-sizing: border-box;
   background-color: white;
-  padding: 5px 15px;
+  padding: 10px;
   border-radius: 8px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   width: 100%;
@@ -204,12 +195,22 @@ body {
 
 /* Headings */
 h1 {
+  /* border: 2px solid violet; */
   box-sizing: border-box;
   font-size: 4vw;
+  margin: .4em 0px;
   font-family: monospace;
+}
+#total {
+box-sizing: border-box;
+/* border: 2px solid violet; */
+font-size: 3vw;
+font-family: monospace;
+margin: 0px 8px;
 }
 
 .h1-icon {
+  /* border: 2px solid blue; */
   box-sizing: border-box;
   display: flex;
   flex-direction: row;
@@ -217,18 +218,28 @@ h1 {
   align-items: center;
 }
 
+
+/* .h1-toggle-container#h1-toggle-earnings {
+  margin-top: 100px;
+} */
+
 .h1-toggle-container {
+  /* border:2px solid green; */
   /* box-sizing: border-box; */
   display: flex;
   flex-direction: row;
+  align-items: center;
   justify-content: space-between;
 }
 
-#total {
-  margin-top: 20px;
-  font-family: monospace;
-  font-weight: normal;
-  font-size: .9rem;
+.financial-overview-container {
+  /* border: 2px solid red; */
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0px;
 }
 
 /* Select Element */
@@ -339,8 +350,7 @@ select {
   cursor: pointer;
   transition: all 0.3s ease;
   font-family: monospace;
-  margin: 12px;
-  /* border: 1px solid #45a049;  */
+  margin-right: 8px;
   color: black;
   font-weight: bold;
   white-space: nowrap;
@@ -579,7 +589,7 @@ select {
     font-size: 10px;
     cursor: pointer;
     padding: 2px 10px;
-    margin: 20px 20px 20px 10px;
+    /* margin: 20px 20px 20px 10px; */
     
   }
 
